---
source: src/reg_compiler/tests.rs
expression: err
---
0 ; script
1 [   1]  Push           L26:  
2 [   1]  LoadImediate   r9[fn([fn([i64, i64, i64], 0)], 0)] (local *3)  
3 ; imediate killed 10 for global *0
4 [   1]  MemCpy         (global *0)  r9[fn([fn([i64, i64, i64], 0)], 0)] (1u)  
5 [   1]  Pop            
6 [   1]  Push           L30:  
7 [   1]  LoadImediate   r11[fn([nil], 0)] (local *3)  
8 ; imediate killed 12 for global *1
9 [   1]  MemCpy         (global *1)  r11[fn([nil], 0)] (1u)  
10 [   1]  Pop            
11 ; imediate killed 13 for global *1
12 [   0]  Move           r14[&fn([nil], 0)] (global *1)  
13 [   0]  Move           r15[fn([nil], 0)] r14[&fn([nil], 0)] 
14 [   0]  PreCall        r16[nil] r15[fn([nil], 0)] (0u)  
15 [   0]  Call           
16 [   0]  Halt           
17 ; anon0
18 [   1]  LoadImediate   r1[i64] (local *3)  
19 [   1]  Move           r2[&i64] r1[i64] 
20 [   1]  Load           r3[i64] r2[&i64] 
21 [   1]  LoadImediate   r4[i64] (local *4)  
22 [   1]  Move           r5[&i64] r4[i64] 
23 [   1]  Load           r6[i64] r5[&i64] 
24 [   1]  AddInt         r7[i64] r3[i64] r6[i64] 
25 [   1]  Return         r7[i64] (0u)  
26 ; t
27 [   1]  Push           L17:  
28 [   1]  LoadImediate   r8[fn([i64, i64, i64], 0)] (local *3)  
29 [   1]  Return         r8[fn([i64, i64, i64], 0)] (1u)  
30 ; main
31 [   1]  Return         r0[nil] (0u)
